--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 						<p class="step" data-delay="900"><span>02.</span>Изучение объекта</p>
 						<p class="step" data-delay="1000"><span>03.</span>Изучение истории бренда</p>
 						<p class="step" data-delay="1100"><span>04.</span>Изучение световой и архитектурной среды территории</p>
-						<a href="#" class="b-white-link step" data-delay="1200">Смотреть все пункты</a>
+						<a href="#" class="fancy b-white-link step" data-delay="1200" data-block="#b-popup-tz">Смотреть все пункты</a>
 					</div>
 				</div>
 			</li>
@@ -461,7 +461,7 @@
 							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
 						</div>
 						<div class="b-butt-cont">
-							<a href="#" class="b-green-butt">получить консультацию у сергея</a>
+							<a href="#" class="fancy b-green-butt" data-block="#b-popup-consult">получить консультацию у сергея</a>
 						</div>
 					</div>
 					<div class="b-slide">
@@ -545,7 +545,7 @@
 					<div><img src="i/b-7/2.png" alt=""></div>
 					<h3>Дополнительные светильники в той<br>же температуре (бинирование)</h3>
 					<p>Бинирование позволяет получить партию<br>светодиодов со 100% попаданием<br>в предыдущую световую температуру.</p>
-					<a href="#" class="b-white-link">Подробнее</a>
+					<a href="#" class="fancy b-white-link" data-block="#b-popup-binir">Подробнее</a>
 				</li>
 				<li>
 					<div><img src="i/b-7/3.png" alt=""></div>
@@ -590,7 +590,7 @@
 					<h4>8 800 134-13-13</h4>
 					<h3>или</h3>
 					<h5>+7 990 777-52-52</h5>
-					<a href="#" class="b-green-butt">Закажите звонок</a>
+					<a href="#" class="fancy b-green-butt" data-block="#b-popup-callback">Закажите звонок</a>
 				</div>
 				<div class="right">
 					<h3>Наш офис находится по адресу</h3>
