--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="b b-5" data-stellar-background-ratio="0.5">
+	<div class="b b-5" id="b-5" data-stellar-background-ratio="0.5">
 	<!-- <div class="b b-5"> -->
 		<div class="b-block b-absolute b-top-block">
 			<h2 class="b-title">Осуществляем полный цикл работ от<br>разработки технического задания до<br>обслуживания светильников</h2>
