--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 		<div class="right">
 			<h3>Оставьте заявку</h3>
 			<h4>на разработку коммерческого<br>предложения</h4>
-			<form action="kitsend.php" method="POST">
+			<form action="kitsend.php" method="POST" data-block="#b-popup-2">
 				<div class="b-popup-form">
 					<label for="name">Введите Ваше имя</label>
 					<input type="text" id="name" name="name" required placeholder="Иван Иванов">
@@ -634,7 +634,7 @@
 		<div class="for_all b-popup">
 			<h3>Получите консультацию специалиста 500lux</h3>
 			<h4>Оставьте ваши данные, и Сергей<br>свяжется с Вами в течение 12 минут</h4>
-			<form action="kitsend.php" method="POST">
+			<form action="kitsend.php" method="POST" data-block="#b-popup-2">
 				<div class="b-popup-form">
 					<label for="name">Введите Ваше имя</label>
 					<input type="text" id="name" name="name" required placeholder="Иван Иванов">
@@ -653,7 +653,7 @@
 		<div class="for_all b-popup">
 			<h3>Заказать обратный звонок</h3>
 			<h4>Оставьте Ваши данные, и наш менеджер свяжется с Вами в течение 8 минут</h4>
-			<form action="kitsend.php" method="POST">
+			<form action="kitsend.php" method="POST" data-block="#b-popup-2">
 				<div class="b-popup-form">
 					<label for="name2">Введите Ваше имя</label>
 					<input type="text" id="name2" name="name" required placeholder="Иван Иванов">
@@ -673,7 +673,7 @@
 				<div class="left">Посмотреть содержание</div>
 				<div class="right">
 					<h4><span>Оставьте заявку</span><br>на разработку коммерческого предложения</h4>
-					<form action="kitsend.php" method="POST">
+					<form action="kitsend.php" method="POST" data-block="#b-popup-2">
 						<div class="b-popup-form">
 							<label for="name3">Введите Ваше имя</label>
 							<input type="text" id="name3" name="name" required placeholder="Иван Иванов">
@@ -696,7 +696,7 @@
 				<div class="left">Посмотреть содержание</div>
 				<div class="right">
 					<h4><span>Заполните форму,</span><br>и пример коммерческого предложения<br>будет выслан вам на почту</h4>
-					<form action="kitsend.php" method="POST">
+					<form action="kitsend.php" method="POST" data-block="#b-popup-2">
 						<div class="b-popup-form">
 							<label for="email4">Введите Ваш E-mail</label>
 							<input type="text" id="email4" name="email" required placeholder="mail@mail.ru">
@@ -717,7 +717,7 @@
 				<div class="left"></div>
 				<div class="right">
 					<h4><span>Оставьте заявку,</span><br>на разработку визуализаций<br>прямо сейчас</h4>
-					<form action="kitsend.php" method="POST">
+					<form action="kitsend.php" method="POST" data-block="#b-popup-2">
 						<div class="b-popup-form">
 							<label for="name5">Введите Ваше имя</label>
 							<input type="text" id="name5" name="name" required placeholder="Иван Иванов">
@@ -746,7 +746,7 @@
 				<li><span>07.</span>Фотографии реализованных объектов с такими же светильниками</li>
 				<li><span>08.</span>Пилотный светотехнический расчет</li>
 			</ul>
-			<form action="kitsend.php" method="POST">
+			<form action="kitsend.php" method="POST" data-block="#b-popup-2">
 				<input type="submit" class="ajax b-green-butt" value="Скачать пример предложения">
 			</form>
 		</div>
