--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
 						</div>
 						<div class="b-butt-cont">
-							<a href="#" class="b-green-butt">получить консультацию у сергея</a>
+							<a href="#" class="fancy b-green-butt" data-block="#b-popup-consult">получить консультацию у сергея</a>
 						</div>
 					</div>
 					<div class="b-slide">
@@ -513,7 +513,7 @@
 							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
 						</div>
 						<div class="b-butt-cont">
-							<a href="#" class="b-green-butt">получить консультацию у сергея</a>
+							<a href="#" class="fancy b-green-butt" data-block="#b-popup-consult">получить консультацию у сергея</a>
 						</div>
 					</div>
 				</div>
@@ -559,7 +559,7 @@
 	<div class="b b-8">
 		<div class="b-block clearfix">
 			<div class="b-book"></div>
-			<a href="#" class="b-green-butt b-circle-butt">Посмотреть<br>содержание</a>
+			<a href="#" class="fancy b-green-butt b-circle-butt" data-block="#b-popup-commerse-ex">Посмотреть<br>содержание</a>
 			<div class="left">
 				<h2>Получите коммерческое<br>предложение и узнайте,<br>как сократить смету на 35%</h2>
 			</div>
@@ -612,7 +612,7 @@
 				<a href="mailto:info@500lux.ru">info@500lux.ru</a>
 				<div class="b-bottom-links">
 					<a href="#">Реквизиты</a>
-					<a href="#">Политика конфиденциальности</a>
+					<a href="#" class="fancy" data-block="#b-popup-text">Политика конфиденциальности</a>
 				</div>
 			</div>
 			<div class="left b-dev-cont">
@@ -670,7 +670,7 @@
 		<div class="for_all b-popup commerse-cont">
 			<h3>Получите коммерческое предложение<br>и узнайте, как сократить смету на 35%</h3>
 			<div class="commerse clearfix">
-				<div class="left">Посмотреть содержание</div>
+				<a href="#" class="fancy left" data-block="#b-popup-commerse-ex">Посмотреть содержание</a>
 				<div class="right">
 					<h4><span>Оставьте заявку</span><br>на разработку коммерческого предложения</h4>
 					<form action="kitsend.php" method="POST">
@@ -693,7 +693,7 @@
 		<div class="for_all b-popup commerse-cont">
 			<h3>Скачайте пример нашего<br>коммерческого предложения</h3>
 			<div class="commerse clearfix">
-				<div class="left">Посмотреть содержание</div>
+				<a href="#" class="fancy left" data-block="#b-popup-commerse-ex">Посмотреть содержание</a>
 				<div class="right">
 					<h4><span>Заполните форму,</span><br>и пример коммерческого предложения<br>будет выслан вам на почту</h4>
 					<form action="kitsend.php" method="POST">
