--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 	</ul>
 	<div class="menu-overlay"></div>
 	<ul class="top-menu">
-		<li class="b-go" data-block=".b-1"><a href="#">О компании</a></li>
-		<li class="b-go" data-block=".b-2"><a href="#">Наши объекты</a></li>
-		<li class="b-go" data-block=".b-3"><a href="#">5 визуализаций бесплатно</a></li>
-		<li class="b-go" data-block=".b-4"><a href="#">Узкая специализация</a></li>
-		<li class="b-go" data-block=".b-4"><a href="#">Гарантия сроков</a></li>
-		<li class="b-go" data-block=".b-4"><a href="#">Оптимизируем смету на 35%</a></li>
+		<li class="b-go" data-block=".b-3"><a href="#">О компании</a></li>
+		<li class="b-go" data-block=".b-4"><a href="#">Наши объекты</a></li>
+		<li class="b-go" data-block=".b-5"><a href="#">5 визуализаций бесплатно</a></li>
+		<li class="b-go" data-block=".b-6"><a href="#">Узкая специализация</a></li>
+		<li class="b-go" data-block=".b-7"><a href="#">Гарантия сроков</a></li>
+		<li class="b-go" data-block=".b-8"><a href="#">Оптимизируем смету на 35%</a></li>
 	</ul>
 	<div class="b b-1">
 		<div class="b-block">
@@ -353,7 +353,7 @@
 			</li>
 			<li class="b-way b-way-4" id="b-way-4" data-height="1140">
 				<div class="b-block">
-					<div class="b-shine"></div>
+					<div class="b-shine step" data-delay="200" data-duration="800"></div>
 					<div class="b-map"></div>
 					<div class="b-text-cont">
 						<h3 class="step" data-delay="200">Подберем идеальное оборудование<br>под вашу задачу из 11 000 изделий<br>на 56-ти заводах!</h3>
@@ -435,7 +435,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="right b-slider b-staff-slider">
+				<div class="right b-slider b-staff-slider" onselectstart="return false;">
 					<span class="b-staff-nav b-left-butt"></span>
 					<span class="b-staff-nav b-right-butt"></span>
 					<div class="b-slide" style="display: block;">
@@ -487,7 +487,7 @@
 							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
 						</div>
 						<div class="b-butt-cont">
-							<a href="#" class="b-green-butt">получить консультацию у сергея</a>
+							<a href="#" class="b-green-butt fancy" data-block="#b-popup-consult">получить консультацию у сергея</a>
 						</div>
 					</div>
 					<div class="b-slide">
@@ -513,7 +513,137 @@
 							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
 						</div>
 						<div class="b-butt-cont">
-							<a href="#" class="b-green-butt">получить консультацию у сергея</a>
+							<a href="#" class="b-green-butt fancy" data-block="#b-popup-consult">получить консультацию у сергея</a>
+						</div>
+					</div>
+					<div class="b-slide">
+						<div class="b-image-cont">
+							<div class="b-image" style="background-image: url('i/b-6/man.png');"></div>
+							<h3>Сергей Максимов 3</h3>
+							<h5>Генеральный директор</h5>
+						</div>
+						<ul class="b-skill clearfix">
+							<li>
+								<p>10 лет<br>стажа</p>
+							</li>
+							<li>
+								<p>10 успешно<br>выполненных<br>проектов</p>
+							</li>
+							<li>
+								<p>4 года<br>в компании</p>
+							</li>
+						</ul>
+						<div class="b-desc">
+							<h3>«В 100% случаев можно подобрать<br>более оптимальное оборудование и не только<br>оптимизировать смету, но и срок поставки<br>сделать короче»</h3>
+							<p>Сергей последние 6 лет специализируется на архитектурном и спортивном освещении. По его проектам было освещено свыше 1 миллиона квадратных метров фасадов зданий. Сергей держит в голове сроки изготовления светильников на 56 фабриках и знает 100% ассортимента каждой из них. За 6 лет благодаря подбору аналогичного оборудования в сумме ему удалось сэкономить более 14 миллионов рублей для его клиентов.</p>
+							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
+						</div>
+						<div class="b-butt-cont">
+							<a href="#" class="b-green-butt fancy" data-block="#b-popup-consult">получить консультацию у сергея</a>
+						</div>
+					</div>
+					<div class="b-slide">
+						<div class="b-image-cont">
+							<div class="b-image" style="background-image: url('i/b-6/man.png');"></div>
+							<h3>Сергей Максимов 3</h3>
+							<h5>Генеральный директор</h5>
+						</div>
+						<ul class="b-skill clearfix">
+							<li>
+								<p>10 лет<br>стажа</p>
+							</li>
+							<li>
+								<p>10 успешно<br>выполненных<br>проектов</p>
+							</li>
+							<li>
+								<p>4 года<br>в компании</p>
+							</li>
+						</ul>
+						<div class="b-desc">
+							<h3>«В 100% случаев можно подобрать<br>более оптимальное оборудование и не только<br>оптимизировать смету, но и срок поставки<br>сделать короче»</h3>
+							<p>Сергей последние 6 лет специализируется на архитектурном и спортивном освещении. По его проектам было освещено свыше 1 миллиона квадратных метров фасадов зданий. Сергей держит в голове сроки изготовления светильников на 56 фабриках и знает 100% ассортимента каждой из них. За 6 лет благодаря подбору аналогичного оборудования в сумме ему удалось сэкономить более 14 миллионов рублей для его клиентов.</p>
+							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
+						</div>
+						<div class="b-butt-cont">
+							<a href="#" class="b-green-butt fancy" data-block="#b-popup-consult">получить консультацию у сергея</a>
+						</div>
+					</div>
+					<div class="b-slide">
+						<div class="b-image-cont">
+							<div class="b-image" style="background-image: url('i/b-6/man.png');"></div>
+							<h3>Сергей Максимов 3</h3>
+							<h5>Генеральный директор</h5>
+						</div>
+						<ul class="b-skill clearfix">
+							<li>
+								<p>10 лет<br>стажа</p>
+							</li>
+							<li>
+								<p>10 успешно<br>выполненных<br>проектов</p>
+							</li>
+							<li>
+								<p>4 года<br>в компании</p>
+							</li>
+						</ul>
+						<div class="b-desc">
+							<h3>«В 100% случаев можно подобрать<br>более оптимальное оборудование и не только<br>оптимизировать смету, но и срок поставки<br>сделать короче»</h3>
+							<p>Сергей последние 6 лет специализируется на архитектурном и спортивном освещении. По его проектам было освещено свыше 1 миллиона квадратных метров фасадов зданий. Сергей держит в голове сроки изготовления светильников на 56 фабриках и знает 100% ассортимента каждой из них. За 6 лет благодаря подбору аналогичного оборудования в сумме ему удалось сэкономить более 14 миллионов рублей для его клиентов.</p>
+							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
+						</div>
+						<div class="b-butt-cont">
+							<a href="#" class="b-green-butt fancy" data-block="#b-popup-consult">получить консультацию у сергея</a>
+						</div>
+					</div>
+					<div class="b-slide">
+						<div class="b-image-cont">
+							<div class="b-image" style="background-image: url('i/b-6/man.png');"></div>
+							<h3>Сергей Максимов 3</h3>
+							<h5>Генеральный директор</h5>
+						</div>
+						<ul class="b-skill clearfix">
+							<li>
+								<p>10 лет<br>стажа</p>
+							</li>
+							<li>
+								<p>10 успешно<br>выполненных<br>проектов</p>
+							</li>
+							<li>
+								<p>4 года<br>в компании</p>
+							</li>
+						</ul>
+						<div class="b-desc">
+							<h3>«В 100% случаев можно подобрать<br>более оптимальное оборудование и не только<br>оптимизировать смету, но и срок поставки<br>сделать короче»</h3>
+							<p>Сергей последние 6 лет специализируется на архитектурном и спортивном освещении. По его проектам было освещено свыше 1 миллиона квадратных метров фасадов зданий. Сергей держит в голове сроки изготовления светильников на 56 фабриках и знает 100% ассортимента каждой из них. За 6 лет благодаря подбору аналогичного оборудования в сумме ему удалось сэкономить более 14 миллионов рублей для его клиентов.</p>
+							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
+						</div>
+						<div class="b-butt-cont">
+							<a href="#" class="b-green-butt fancy" data-block="#b-popup-consult">получить консультацию у сергея</a>
+						</div>
+					</div>
+					<div class="b-slide">
+						<div class="b-image-cont">
+							<div class="b-image" style="background-image: url('i/b-6/man.png');"></div>
+							<h3>Сергей Максимов 3</h3>
+							<h5>Генеральный директор</h5>
+						</div>
+						<ul class="b-skill clearfix">
+							<li>
+								<p>10 лет<br>стажа</p>
+							</li>
+							<li>
+								<p>10 успешно<br>выполненных<br>проектов</p>
+							</li>
+							<li>
+								<p>4 года<br>в компании</p>
+							</li>
+						</ul>
+						<div class="b-desc">
+							<h3>«В 100% случаев можно подобрать<br>более оптимальное оборудование и не только<br>оптимизировать смету, но и срок поставки<br>сделать короче»</h3>
+							<p>Сергей последние 6 лет специализируется на архитектурном и спортивном освещении. По его проектам было освещено свыше 1 миллиона квадратных метров фасадов зданий. Сергей держит в голове сроки изготовления светильников на 56 фабриках и знает 100% ассортимента каждой из них. За 6 лет благодаря подбору аналогичного оборудования в сумме ему удалось сэкономить более 14 миллионов рублей для его клиентов.</p>
+							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
+						</div>
+						<div class="b-butt-cont">
+							<a href="#" class="b-green-butt fancy" data-block="#b-popup-consult">получить консультацию у сергея</a>
 						</div>
 					</div>
 				</div>
