--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script type="text/javascript" src="js/device.js"></script>
 	<script type="text/javascript" src="js/KitSend.js"></script>
 	<script type="text/javascript" src="js/KitSlider.js"></script>
+	<script type="text/javascript" src="js/KitHouse.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 
 </head>
@@ -53,17 +54,17 @@
 	</ul>
 	<div class="b b-1">
 		<div class="b-block">
-			<div class="b-top clearfix">
+			<div class="b-top">
 				<div class="b-logo-cont left clearfix">
 					<div class="b-burger-button-cont left"><a href="#" class="b-burger-button"><span></span></a></div>
 					<a href="#"><img src="i/logo.png" class="left" alt=""></a>
 					<div class="b-logo-text left">ОСВЕЩЕНИЕ ЗДАНИЙ<br>И СООРУЖЕНИЙ</div>
 				</div>
 				<div class="b-date-cont right clearfix">
-					<p class="left">Звонок по России<br>бесплатный</p>
-					<h2 class="left">8 (800) 555 15 24</h2>
+					<!-- <p class="left">Звонок по России<br>бесплатный</p> -->
+					<h2 class="left">+7 (495) 664-46-74</h2>
+					<h3><a href="#" class="fancy b-white-link" data-block="#b-popup-callback">Перезвоните мне</a></h3>
 				</div>
-				
 			</div>
 			<h1>Архитектурное<br>освещение зданий<br>и сооружений по<br>всей России</h1>
 			<h4>Проектирование, поставка, монтаж.<br>Юридическая гарантия сроков</h4>
@@ -119,7 +120,7 @@
 				<li>
 					<span></span>
 					<h3>Разработка</h3>
-					<p>Проект освещения под ключ.<br>В команде личный менеджер<br>проекта, 2 светодизайнера,<br>архитектор, 2 проектировщика,<br>логист, руководитель<br>монтажной группы.</p>
+					<p>7 специалистов в команде<br>с нуля разработают проект<br>освещения для вашего<br>объекта</p>
 				</li>
 				<li>
 					<span></span>
@@ -153,10 +154,11 @@
 				<div class="right b-slider b-case-slider">
 					<div class="b-slide" style="display: block;">
 						<div class="b-gallery">
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/4.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/1.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/2.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/3.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/5.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
 							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
@@ -171,6 +173,18 @@
 										<h5>Результат</h5>
 										<h6>8 млн руб. экономии без изменения РД</h6>
 										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+									</div>
+									<div class="b-hidden-tasks">
+										<div class="b-task clearfix">
+											<h5>Особенности</h5>
+											<h6>Сверхсрочно и надежно</h6>
+											<p>Объект был под контролем Администрации Москвы. Сдвигать сроки было нельзя.<br>К оборудованию были повышенные требования по коэффециенту пыле- и влагозащиты IP 67 (светильники крепились на 35 метровой высоте без навеса).<br>Минимальный срок гарантии на оборудование должен был составлять 5 лет</p>
+										</div>
+										<div class="b-task clearfix">
+											<h5>Решение</h5>
+											<h6>Повлияли на очередь на заводе</h6>
+											<p>Так как мы можем влиять на очередь у наших заводов-партнеров, мы совершили поставку на 1 месяц быстрее.<br>Пока производились светильники, мы параллельно оптимизировали Рабочую Документацию.<br>В то же время мы начали подготовку фасада к монтажу, собрали щит электропитания и сэкономили 2 недели.</p>
+										</div>
 									</div>
 									<div class="tleft">
 										<a href="#" class="b-green-butt">Подробнее</a>
@@ -193,10 +207,7 @@
 					</div>
 					<div class="b-slide">
 						<div class="b-gallery">
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/2/1.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
 							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
@@ -211,6 +222,18 @@
 										<h5>Результат</h5>
 										<h6>8 млн руб. экономии без изменения РД</h6>
 										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+									</div>
+									<div class="b-hidden-tasks">
+										<div class="b-task clearfix">
+											<h5>Особенности</h5>
+											<h6>Сверхсрочно и надежно</h6>
+											<p>Объект был под контролем Администрации Москвы. Сдвигать сроки было нельзя.<br>К оборудованию были повышенные требования по коэффециенту пыле- и влагозащиты IP 67 (светильники крепились на 35 метровой высоте без навеса).<br>Минимальный срок гарантии на оборудование должен был составлять 5 лет</p>
+										</div>
+										<div class="b-task clearfix">
+											<h5>Решение</h5>
+											<h6>Повлияли на очередь на заводе</h6>
+											<p>Так как мы можем влиять на очередь у наших заводов-партнеров, мы совершили поставку на 1 месяц быстрее.<br>Пока производились светильники, мы параллельно оптимизировали Рабочую Документацию.<br>В то же время мы начали подготовку фасада к монтажу, собрали щит электропитания и сэкономили 2 недели.</p>
+										</div>
 									</div>
 									<div class="tleft">
 										<a href="#" class="b-green-butt">Подробнее</a>
@@ -233,24 +256,35 @@
 					</div>
 					<div class="b-slide">
 						<div class="b-gallery">
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
-							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/3/1.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/3/2.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/3/3.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
-							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
+							<h3>На 1 месяц раньше срока поставили и смонтировали<br>светильники под контролем Администрации Москвы</h3>
 							<div class="clearfix">
 								<div class="left">
 									<div class="b-task clearfix">
 										<h5>Задача</h5>
-										<h6>Фирменный стиль Сбербанка в освещении</h6>
-										<p>Разработать архитектурно-художественное освещение, в котором узнавались бы фирменные цвета Сбербанка. Подчеркнуть контуры здания и уложиться в бюджет.</p>
+										<h6>Поставить и смонтировать светильники быстрее конкурентов</h6>
+										<p>Нам дали коммерческое предложение конкурентов с задачей:: "Нужно такое же оборудование, но быстрее и с монтажом". Конкуренты предлагали поставку за 2 месяца. Мы сделали предложение поставка + монтаж за 1,5 месяца</p>
 									</div>
 									<div class="b-task clearfix">
 										<h5>Результат</h5>
-										<h6>8 млн руб. экономии без изменения РД</h6>
-										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+										<h6>Проект закрыт в срок</h6>
+										<p>1) Поставили светильники по всем требованиям на 1 месяц быстрее срока<br><br>2) Сократили смету на 27% за счет прямых контрактов с заводами-производителями<br><br>3) Оптимизировали Рабочую Документацию<br>за 10 дней<br><br>4) Смонтировали объект за 1 месяц</p>
+									</div>
+									<div class="b-hidden-tasks">
+										<div class="b-task clearfix">
+											<h5>Особенности</h5>
+											<h6>Сверхсрочно и надежно</h6>
+											<p>Объект был под контролем Администрации Москвы. Сдвигать сроки было нельзя.<br>К оборудованию были повышенные требования по коэффециенту пыле- и влагозащиты IP 67 (светильники крепились на 35 метровой высоте без навеса).<br>Минимальный срок гарантии на оборудование должен был составлять 5 лет</p>
+										</div>
+										<div class="b-task clearfix">
+											<h5>Решение</h5>
+											<h6>Повлияли на очередь на заводе</h6>
+											<p>Так как мы можем влиять на очередь у наших заводов-партнеров, мы совершили поставку на 1 месяц быстрее.<br>Пока производились светильники, мы параллельно оптимизировали Рабочую Документацию.<br>В то же время мы начали подготовку фасада к монтажу, собрали щит электропитания и сэкономили 2 недели.</p>
+										</div>
 									</div>
 									<div class="tleft">
 										<a href="#" class="b-green-butt">Подробнее</a>
@@ -325,16 +359,60 @@
 					</div>
 				</div>
 			</li>
-			<li class="b-way b-way-2" id="b-way-2" data-height="909">
+			<li class="b-way b-way-2" id="b-way-2" data-height="1215">
 				<div class="b-block">
-					<div class="b-lamp"></div>
-					<div class="b-shine"></div>
+					<div class="b-houses"></div>
+					<div class="b-day"></div>
 					<div class="b-text-cont">
-						<h3>Предоставим до 10 светильников на тест-драйв бесплатно. В согласование проекта также входит:</h3>
-						<p><span>01.</span>Презентация образцов продукции.</p>
-						<p><span>02.</span>Экскурсия на фабрику-производителя</p>
-						<p><span>03.</span>Монтаж нескольких светильников. Демонстрация,<br>как это будет выглядеть на фасаде.</p>
-						<p><span>04.</span>Утверждение концепции.</p>
+						<div class="clearfix">
+							<h3 class="left step" data-delay="200">Подготовим 5 вариантов<br>визуализации вашего<br>проекта в течение<br>7 дней — за свой счет</h3>
+							<div class="right">
+								<h4 class="step" data-delay="800">Вместе с визуализацией вы получите:</h4>
+								<div class="clearfix">
+									<p class="step" data-delay="1000"><span>01.</span>Подбор<br>оборудования</p>
+									<p class="step" data-delay="1200"><span>02.</span>Расчет<br>сроков поставки</p>
+									<p class="step" data-delay="1400"><span>03.</span>Расчет<br>сметной стоимости</p>
+									<p class="step" data-delay="1600"><span>04.</span>Обоснование концепций<br>от руководителя проекта</p>
+								</div>
+							</div>
+						</div>
+						<div style="text-align:center;">
+							<a href="#" class="b-green-butt step fancy" data-block="#b-popup-visual" data-delay="2200">Получить 5 визуализаций</a>
+						</div>
+						<ul class="b-house">
+							<li><img src="i/b-5/2/1.png" alt=""></li>
+							<li><img src="i/b-5/2/2.png" alt=""></li>
+							<li><img src="i/b-5/2/3.png" alt=""></li>
+							<li><img src="i/b-5/2/4.png" alt=""></li>
+							<li><img src="i/b-5/2/5.png" alt=""></li>
+						</ul>
+						<div class="b-house-thumbs-cont">
+							<h5>Переключите пример визуализации</h5>
+							<ul class="b-house-thumbs clearfix">
+								<li class="clearfix active">
+									<img src="i/b-5/2/switch-night.png" alt="">
+									<span>01.</span>
+									<div></div>
+								</li>
+								<li class="clearfix">
+									<span>02.</span>
+									<div></div>
+								</li>
+								<li class="clearfix">
+									<span>03.</span>
+									<div></div>
+								</li>
+								<li class="clearfix">
+									<span>04.</span>
+									<div></div>
+								</li>
+								<li class="clearfix">
+									<img src="i/b-5/2/switch-day.png" alt="">
+									<span>05.</span>
+									<div></div>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</li>
@@ -716,10 +794,8 @@
 			<h2 class="b-title">Ответим на любой ваш вопрос</h2>
 			<div class="clearfix">
 				<div class="left">
-					<h3>Звонок по России бесплатный</h3>
-					<h4>8 800 134-13-13</h4>
-					<h3>или</h3>
-					<h5>+7 990 777-52-52</h5>
+					<!-- <h3>Звонок по России бесплатный</h3> -->
+					<h4>+7 (495) 664-46-74</h4>
 					<a href="#" class="fancy b-green-butt" data-block="#b-popup-callback">Закажите звонок</a>
 				</div>
 				<div class="right">
@@ -738,7 +814,7 @@
 				<p>Архитектурное освещение<br>сложных проектов.</p>
 			</div>
 			<div class="left b-contact-cont">
-				<h3>8 800 134-13-13</h3>
+				<h3>+7 (495) 664-46-74</h3>
 				<a href="mailto:info@500lux.ru">info@500lux.ru</a>
 				<div class="b-bottom-links">
 					<a href="#">Реквизиты</a>
@@ -793,7 +869,7 @@
 					<input type="submit" class="ajax b-green-butt" value="Перезвоните мне">
 				</div>
 			</form>
-			<h5>или позвоните нам по телефону<br><span>8 (495) 212-16-71</span></h5>
+			<h5>или позвоните нам по телефону<br><span>+7 (495) 664-46-74</span></h5>
 		</div>
 	</div>
 	<div id="b-popup-commerse">
@@ -922,7 +998,7 @@
 			<h3>Спасибо за оказанное<br>доверие!</h3>
 			<h4>Мы свяжемся с Вами в ближайшее время.<br>Время работы нашего офиса — c понедельника<br>по пятницу с 9:00 до 20:00 по Москве</h4>
 			<h4>Если у Вас есть срочный вопрос, звоните<br>нам по телефону:<br><b></h4>
-			<h5><span>8 (800) 38-81-880</span><br>бесплатно по России</h5>
+			<h5><span>+7 (495) 664-46-74</span></h5>
 			<h6>С уважением,<br>Сергей Ренжин<br>директор ООО «500 люкс»</h6>
 		</div>
 	</div>
