--- a/index.html
+++ b/index.html
@@ -929,9 +929,9 @@
 	</div>
 	<div id="b-popup-visual">
 		<div class="for_all b-popup commerse-cont">
-			<h3>Получите 5 вариантов визуализации Вашего<br>объекта стоимостью 47 000 руб. за наш счет<br>в течение 5-ти дней</h3>
+			<h3>Получите 5 вариантов визуализации Вашего<br>объекта стоимостью <span>47 000 руб.</span> за наш счет<br>в течение 5-ти дней</h3>
 			<div class="commerse clearfix">
-				<div class="left"></div>
+				
 				<div class="right">
 					<h4><span>Оставьте заявку,</span><br>на разработку визуализаций<br>прямо сейчас</h4>
 					<form action="kitsend.php" method="POST" data-block="#b-popup-2">
