--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	<div class="b b-2">
 		<div class="b-block clearfix">
 			<div class="left">
-				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-commerse">
+				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-2">
 					<b>Получить коммерческое<br>предложение</b>
 					<span>pdf, 2.5 мб.</span>
 				</a>
